# l-reader

./: .gitignore  CMakeLists.txt
src/: main.cpp  resources.qrc
src/CasualMode/: CasualModeController.cpp  CasualModeController.h  CasualModeWidget.cpp  CasualModeWidget.h  casual_mode_controller.cpp  casual_mode_controller.hpp  casual_mode_widget.cpp  casual_mode_widget.hpp  casual_sidebar_models.cpp  casual_sidebar_models.hpp
src/DocumentEngine/: document_engine.cpp  document_engine.hpp  document_identity.cpp  document_identity.hpp  ebook_engine.cpp  ebook_engine.hpp  highlight_entry.hpp  highlight_manager.cpp  highlight_manager.hpp  markdown_engine.cpp  markdown_engine.hpp  pdf_bookmark_manager.cpp  pdf_bookmark_manager.hpp  pdf_engine.cpp  pdf_engine.hpp  toc_worker.cpp  toc_worker.hpp
src/ModeManager/: casual_mode.hpp  mode_manager.cpp  mode_manager.hpp  reading_mode.hpp  standard_mode.hpp  study_mode.hpp
src/Persistence/: sidecar_manager.cpp  sidecar_manager.hpp
src/RenderSubsystem/: page_cache.cpp  page_cache.hpp  render_worker.hpp
src/Ui/: epub_style.hpp  layout_tokens.hpp  ui_strings.hpp
src/ViewLayer/: bookmark_item_widget.cpp  bookmark_item_widget.hpp  casual_pdf_view.cpp  casual_pdf_view.hpp  main_window.cpp  main_window.hpp  main_window_bookmarks.cpp  main_window_document.cpp  main_window_epub.cpp  main_window_gallery.cpp  main_window_page.cpp  main_window_scroll.cpp  main_window_search.cpp  main_window_toc.cpp  main_window_ui.cpp  pdf_canvas_view.cpp  pdf_canvas_view.hpp  pdf_text_layer.cpp  pdf_text_layer.hpp
src/qml/casual/: CasualModeFooter.qml  CasualModeHeader.qml  CasualModeSidebar.qml  CasualModeView.qml  TextSettingsPopover.qml  casual_mode_footer.qml  casual_mode_header.qml  casual_mode_sidebar.qml  casual_mode_view.qml  text_settings_popover.qml
src/styles/: casual.qss  standard.qss  study.qss
